# gtk3-opencv3-ux-sampling

./: CMakeLists.txt  README.md  main_window.glade
include/: camera_image_grabber.h  single_image_window.h
src/: camera_image_window.cpp  main.cpp  single_image_window.cpp
